--- a/MyMusicPlayer2/package.json
+++ b/MyMusicPlayer2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mymusicplayer2",
   "version": "0.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,10 +13,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^2.0.10",
+    "@vueuse/core": "^9.5.0",
+    "axios": "^1.1.2",
+    "dayjs": "^1.11.6",
+    "element-plus": "^2.2.17",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "pinia": "^2.0.21",
+    "pinia-plugin-persist": "^1.0.0",
+    "sass": "^1.70.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@iconify/json": "^2.1.136",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
@@ -28,13 +39,21 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.0.1",
+    "npm-run-all": "^4.1.5",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.19",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "~5.3.0",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-icons": "^0.14.13",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^5.0.10",
+    "vite-plugin-html": "^3.2.0",
     "vitest": "^1.0.4",
     "vue-tsc": "^1.8.25"
   }
